<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IdentifyTheCarImageActivity">

    <ImageView
        android:id="@+id/carImage1"
        android:layout_width="0dp"
        android:layout_height="175dp"
        android:layout_marginTop="4dp"
        android:clickable="true"
        android:contentDescription="@string/car_image_1"
        android:focusable="true"
        android:onClick="imageClicked"
        android:padding="3dp"
        android:src="@drawable/audi3"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/carImage3TextView" />

    <ImageView
        android:id="@+id/carImage2"
        android:layout_width="0dp"
        android:layout_height="175dp"
        android:clickable="true"
        android:contentDescription="@string/car_image_2"
        android:focusable="true"
        android:onClick="imageClicked"
        android:padding="3dp"
        android:src="@drawable/audi3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.077" />

    <ImageView
        android:id="@+id/carImage3"
        android:layout_width="0dp"
        android:layout_height="175dp"
        android:clickable="true"
        android:contentDescription="@string/car_image_3"
        android:focusable="true"
        android:onClick="imageClicked"
        android:padding="3dp"
        android:src="@drawable/audi3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/carImage2TextView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/makeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/carImage1TextView"
        app:layout_constraintVertical_bias="0.759" />

    <TextView
        android:id="@+id/msgTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/makeTextView"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/carImage1TextView" />

    <TextView
        android:id="@+id/carImage2TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFE500"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/carImage2"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/carImage2"
        app:layout_constraintTop_toBottomOf="@+id/carImage2" />

    <TextView
        android:id="@+id/carImage3TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="176dp"
        android:textColor="#FFE500"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/carImage3"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/carImage3"
        app:layout_constraintTop_toTopOf="@+id/carImage3" />

    <TextView
        android:id="@+id/carImage1TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFE500"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/carImage1"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textColor="#000000"
        app:backgroundTint="#2DE336"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.969"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/carImage1"
        app:layout_constraintVertical_bias="0.875"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/timerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/carImage2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.93" />

</androidx.constraintlayout.widget.ConstraintLayout>